test/fixtures/fail/ident_question_mid_chain.l4gs.g
; `?` can prefix the whole identifier but not a non-initial segment.
        ns.?foo = 1
